--- a/intro.html
+++ b/intro.html
@@ -96,6 +96,20 @@
             <h1 id="timeline">Release note</h1>
         </div>
         <ul class="timeline">
+
+					<li class="timeline-inverted">
+						<div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+						<div class="timeline-panel">
+							<div class="timeline-heading">
+								<h4 class="timeline-title">아마존 어소시에이트 가입</h4>
+								<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2015년 8월 4일</small></p>
+							</div>
+							<div class="timeline-body">
+								<p>아마존 어소시에이트 가입으로 일부 데이터 아마존 가격과 비교가 가능해졌습니다. 또 아마존 상품을 링크해서 구매하기 버튼을 달아 바로 구매가
+								가능하도록 하였습니다. 연동 되는 삼품을 계속 늘려갈 예정입니다.</p>
+							</div>
+						</div>
+					</li>
 					<li>
 						<div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 						<div class="timeline-panel">
