--- a/intro.html
+++ b/intro.html
@@ -106,7 +106,7 @@
 							</div>
 							<div class="timeline-body">
 								<p>아마존 어소시에이트 가입으로 일부 데이터 아마존 가격과 비교가 가능해졌습니다. 또 아마존 상품을 링크해서 구매하기 버튼을 달아 바로 구매가
-								가능하도록 하였습니다. 연동 되는 상품을 계속 늘려갈 예정입니다. 아마존에서 구매하시려면 <button  class="btn btn-info" role="button">아마존 구매</button>을
+								가능하도록 하였습니다. 연동 되는 상품을 계속 늘려갈 예정입니다. 아마존에서 구매하시려면 <span class="label label-info">아마존 구매</span>을
 							  클릭 해주세요</p>
 							</div>
 						</div>
