아마존 가격 수

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
 											<p>
 												<blockquote>
-												 <p>평 균 판매가 : {{product.avg| number:0}} krw</p>
+												 <p>공식홈 판매가 : {{product.avg| number:0}} krw</p>
 												 <p ng-if="'am-US' == price.country" ng-repeat="price in product.prices">
 													 아마존 판매가 : {{price.krw | number:0}} krw
 												 </p>
