--- a/intro.html
+++ b/intro.html
@@ -95,6 +95,11 @@
         <div class="page-header">
             <h1 id="timeline">Release note</h1>
         </div>
+				<tabset>
+			    <tab heading="Static title1"></tab>
+	 			  <tab heading="Static title2"></tab>
+					<tab heading="Static title3"></tab>
+				 </tabset>
         <ul class="timeline">
 
 					<li class="timeline-inverted">
