--- a/intro.html
+++ b/intro.html
@@ -19,7 +19,7 @@
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
     <link rel="stylesheet" href="css/timeline.css">
 
-		<script src="js/controller/intro.js?20150728000"></script>
+		<script src="js/controller/intro.js?20150805000"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<title>레고 공홈 가격비교</title>
 		<script>
@@ -96,9 +96,9 @@
             <h1 id="timeline">Release note</h1>
         </div>
 				<tabset>
-			    <tab heading="Static title1"></tab>
-	 			  <tab heading="Static title2"></tab>
-					<tab heading="Static title3"></tab>
+			    <tab heading="Static title1" select="alertMe(1)"></tab>
+	 			  <tab heading="Static title2" select="alertMe(2)"></tab>
+					<tab heading="Static title3" select="alertMe(3)"></tab>
 				 </tabset>
         <ul class="timeline">
 
