--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
 
-		<script src="js/controller/home.js?20150804003"></script>
+		<script src="js/controller/home.js?20150805000"></script>
 		<script src="js/angular-socialshare.min.js?20150728000"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/angular-socialshare.min.css?20150723007" rel="stylesheet">
@@ -227,6 +227,18 @@
 				 </div>
 					</div>
 				</section>
+				<section id="add_content" class="inner">
+					<div class="row">
+						<div class="col-sm-12 text-center">
+						<tabset>
+							<tab heading="전체" select="getHardList()"></tab>
+							<tab heading="Star Wars™" select="getCategoryList('Star Wars™')"></tab>
+							<tab heading="Minecraft™" select="getCategoryList('Minecraft™')"></tab>
+							<tab heading="Architecture" select="getCategoryList('Architecture')"></tab>
+						 </tabset>
+					 </div>
+				 </div>
+				 </section
 				<section id="hard_List" class="inner">
 					<div class="row">
 					  <div class="col-sm-6 col-md-4" ng-repeat="product in hardlist">
@@ -259,7 +271,7 @@
 					</div>
 					<div class="row" ng-hide="moreList(hardlist)">
 						  <div class="col-sm-12">
-								<button style="width:100%" type="button" class="btn btn-info" ng-click="getHardList()" ng-disabled="isListLoading">{{more}}</button>
+								<button style="width:100%" type="button" class="btn btn-info" ng-click="getMoreList()" ng-disabled="isListLoading">{{more}}</button>
 
 
 							</div>
