--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
 
-		<script src="js/controller/home.js?20150805000"></script>
+		<script src="js/controller/home.js?20150805001"></script>
 		<script src="js/angular-socialshare.min.js?20150728000"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/angular-socialshare.min.css?20150723007" rel="stylesheet">
@@ -43,7 +43,7 @@
     <![endif]-->
 
 	</head>
-	<body ng-controller="legoController" data-ng-init="getHardList()"  style="padding-top: 50px;padding-bottom: 20px;">
+	<body ng-controller="legoController" style="padding-top: 50px;padding-bottom: 20px;">
 	<script>
 	  window.fbAsyncInit = function() {
 	    FB.init({
@@ -227,7 +227,7 @@
 				 </div>
 					</div>
 				</section>
-				<section id="add_content" class="inner">
+				<section id="add_content" class="inner" style="padding-top: 50px;padding-bottom: 20px;">
 					<div class="row">
 						<div class="col-sm-12 text-center">
 						<tabset>
