--- a/review/10246.html
+++ b/review/10246.html
@@ -111,7 +111,7 @@
 					</div>
 				</section>
 			</div>
-			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;">
+			<div id="add_content_wrap" class="description-container" style="padding-bottom: 20px;">
 				<section id="add_content2" class="inner">
 
 						<div class="row">
