--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
 
-		<script src="js/controller/home.js?20150805001"></script>
+		<script src="js/controller/home.js?20150805002"></script>
 		<script src="js/angular-socialshare.min.js?20150728000"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/angular-socialshare.min.css?20150723007" rel="stylesheet">
@@ -156,9 +156,11 @@
 							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
 											<p>
 												<blockquote>
-												 <p>공식홈 판매가 : {{product.avg| number:0}} krw</p>
-												 <p ng-if="'am-US' == price.country" ng-repeat="price in product.prices">
-													 아마존 판매가 : {{price.krw | number:0}} krw
+												 <p>공식홈 : {{product.avg| number:0}} krw</p>
+												 <p ng-if="'am-US' == price.country || 'ko-KR' == price.country" ng-repeat="price in product.prices">
+													 <span class="label label-{{price | prodStatus}}" alt="{{price.availabilityMessage}}">
+													 {{price.country | countryName}} : {{price.krw | number:0}} krw
+												 	 </span>
 												 </p>
 											 </blockquote>
 											</p>
