--- a/index.html
+++ b/index.html
@@ -156,9 +156,13 @@
 							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
 											<p>
 												<blockquote>
-												 <p>공식홈 : {{product.avg| number:0}} krw</p>
+												 <p>
+													 <span class="label label-primary col-md-12">
+													 공식홈 : {{product.avg| number:0}} krw
+													 </span>
+												 </p>
 												 <p ng-if="'am-US' == price.country || 'ko-KR' == price.country" ng-repeat="price in product.prices">
-													 <span class="label label-{{price | prodStatus}}" alt="{{price.availabilityMessage}}">
+													 <span class="label label-{{price | prodStatus}}  col-md-12" alt="{{price.availabilityMessage}}">
 													 {{price.country | countryName}} : {{price.krw | number:0}} krw
 												 	 </span>
 												 </p>
