--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
 
-		<script src="js/controller/home.js?20150805002"></script>
+		<script src="js/controller/home.js?20150805003"></script>
 		<script src="js/angular-socialshare.min.js?20150728000"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/angular-socialshare.min.css?20150723007" rel="stylesheet">
@@ -236,9 +236,10 @@
 						<div class="col-sm-12 text-center">
 						<tabset>
 							<tab heading="전체" select="getHardList()"></tab>
-							<tab heading="Star Wars™" select="getCategoryList('Star Wars™')"></tab>
-							<tab heading="Minecraft™" select="getCategoryList('Minecraft™')"></tab>
-							<tab heading="Architecture" select="getCategoryList('Architecture')"></tab>
+							<tab heading="Star Wars™" select="getCategoryList('Star Wars™','')"></tab>
+							<tab heading="Modular" select="getCategoryList('Creator','ModularBuildings')"></tab>
+							<tab heading="Minecraft™" select="getCategoryList('Minecraft™','')"></tab>
+							<tab heading="Architecture" select="getCategoryList('Architecture','')"></tab>
 						 </tabset>
 					 </div>
 				 </div>
