--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 		<script src="js/angular-socialshare.min.js?20150728004"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/angular-socialshare.min.css?20150723007" rel="stylesheet">
-		<SCRIPT charset="utf-8" type="text/javascript" src="http://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=US&ID=V20070822%2FUS%2Flegoprice-20%2F8005%2Fb517f193-e3c3-4f07-9767-e635f82e02c7"> </SCRIPT>
+
+		<SCRIPT charset="utf-8" type="text/javascript" src="http://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=US&ID=V20070822%2FUS%2Flegospriccomp-20%2F8005%2Fcf8f905a-be42-4cb9-b7c4-a9cb72cf4832"> </SCRIPT>
+
 		<title>레고 공홈 가격비교</title>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -167,7 +169,7 @@
 											 </blockquote>
 											</p>
 											<p ng-if="null != product.asin">
-												<a href="http://www.amazon.com/gp/product/{{product.asin}}?ie=UTF8&tag=legoprice-20&link_code=wql" target="_blank">
+												<a href="http://www.amazon.com/gp/product/{{product.asin}}?ie=UTF8&tag=legospriccomp-20&link_code=wql" target="_blank">
 		 										 <button style="width:100%" class="btn btn-info" role="button">아마존 구매</button>
 		 									 </a>
 		 								 </p>
@@ -262,7 +264,7 @@
 								 </blockquote>
 								 <p ng-if="null != product.asin">
 									 <button style="width:49%" class="btn btn-default" role="button" ng-click="viewDetail(product.prodCode)" ng-disabled="isLoading">가격 정보</button>
-									 <a href="http://www.amazon.com/gp/product/{{product.asin}}?ie=UTF8&tag=legoprice-20&link_code=wql" target="_blank">
+									 <a href="http://www.amazon.com/gp/product/{{product.asin}}?ie=UTF8&tag=legospriccomp-20&link_code=wql" target="_blank">
 										 <button style="width:49%" class="btn btn-info" role="button">아마존 구매</button>
 									 </a>
 
