이미지변경..

--- a/review/10248.html
+++ b/review/10248.html
@@ -85,7 +85,10 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/" target="_self">Lego 가격비교</a>
+
+					<a class="navbar-brand" href="/" target="_self">
+						<img alt="Brand" src="/image/shop.png" height="20">
+					</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse" collapse="navbarCollapsed">
           <ul class="nav navbar-nav navbar-right">
