--- a/intro.html
+++ b/intro.html
@@ -72,7 +72,7 @@
 		">
 	</form>
 
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" ng-click="navbarCollapsed = !navbarCollapsed">
