--- a/review/10246.html
+++ b/review/10246.html
@@ -74,7 +74,7 @@
 			">
 		</form>
 
-		<nav class="navbar navbar-inverse navbar-fixed-top">
+		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" ng-click="navbarCollapsed = !navbarCollapsed">
