--- a/intro.html
+++ b/intro.html
@@ -89,7 +89,7 @@
 			<div id="navbar" class="navbar-collapse collapse" collapse="navbarCollapsed">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="/">Home</a></li>
-					<li class="active"><a href="intro.html">About</a></li>
+					<li class="active"><span class="glyphicon glyphicon-book" aria-hidden="true"></span><a href="intro.html">About</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
