--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 				</div>
 				<div id="navbar" class="navbar-collapse collapse" collapse="navbarCollapsed">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="intro.html" target="_self">About</a></li>
+            <li class="active"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span><a href="/">Home</a></li>
+            <li><span class="glyphicon glyphicon-book" aria-hidden="true"></span><a href="intro.html" target="_self">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
 			</div>
