--- a/intro.html
+++ b/intro.html
@@ -88,8 +88,8 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse" collapse="navbarCollapsed">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/">Home</a></li>
-					<li class="active"><span class="glyphicon glyphicon-book" aria-hidden="true"></span><a href="intro.html">About</a></li>
+					<li><span class="glyphicon glyphicon-th-large" aria-hidden="true"><a href="/">Home</a></span></li>
+					<li class="active"><span class="glyphicon glyphicon-book" aria-hidden="true"><a href="intro.html">About</a></span></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
