--- a/review/10248.html
+++ b/review/10248.html
@@ -93,7 +93,7 @@
 				<div id="navbar" class="navbar-collapse collapse" collapse="navbarCollapsed">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="/" target="_self">Home</a></li>
-            <li><span class="glyphicon glyphicon-book" aria-hidden="true"></span><a href="intro.html" target="_self">About</a></li>
+            <li><a href="intro.html" target="_self">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
 			</div>
