--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
 
-		<script src="js/controller/home.js?20150805008"></script>
+		<script src="js/controller/home.js?20150810001"></script>
 		<script src="js/angular-socialshare.min.js?20150728004"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/angular-socialshare.min.css?20150723007" rel="stylesheet">
@@ -264,16 +264,16 @@
 										 <div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://item.getlego.me/detail/{{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
 									 </p>
 									 <p>
-										 <table class="table  table-striped">
-											 <tr>
+										 <table class="table table-striped table-condensed">
+											 <tr class="{{product.priceModel.average | maxPrice: product.priceModel.amazonPrice:product.priceModel.koreaPrice}}">
 												 <td class="text-center">평균</td>
 												 <td class="text-right">{{product.priceModel.average | number:0}} krw</td>
 											 </tr>
-											 <tr>
+											 <tr class="{{product.priceModel.amazonPrice | maxPrice: product.priceModel.average:product.priceModel.koreaPrice}}">
 												 <td class="text-center">아마존</td>
 												 <td class="text-right">{{product.priceModel.amazonPrice | number:0}} krw</td>
 											 </tr>
-											 <tr>
+											 <tr class="{{product.priceModel.koreaPrice | maxPrice: product.priceModel.amazonPrice:product.priceModel.average}}">
 												 <td class="text-center">한국</td>
 												 <td class="text-right">{{product.priceModel.koreaPrice | number:0}} krw</td>
 											 </tr>
