아마존 가격..

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 										 <div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://item.getlego.me/detail/{{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
 									 </p>
 									 <p>
-										 <table class="table table-striped table-condensed">
+										 <table class="table table-condensed">
 											 <tr class="{{product.priceModel.average | maxPrice: product.priceModel.amazonPrice:product.priceModel.koreaPrice}}">
 												 <td class="text-center">평균</td>
 												 <td class="text-right">{{product.priceModel.average | number:0}} krw</td>
