--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 															 <td class="text-center">한국</td>
 															 <td class="text-right">{{product.priceModel.koreaPrice | number:0}} krw</td>
 														 </tr>
-													 </table>													 
+													 </table>
 												 </p>
 											 </blockquote>
 											</p>
@@ -255,6 +255,7 @@
 							<tab heading="전체" select="getHardList()"></tab>
 							<tab heading="Star Wars™" select="getCategoryList('Star Wars™','')"></tab>
 							<tab heading="Modular" select="getCategoryList('Creator','ModularBuildings')"></tab>
+							<tab heading="Ideas" select="getCategoryList('Ideas','')"></tab>
 							<tab heading="Minecraft™" select="getCategoryList('Minecraft™','')"></tab>
 							<tab heading="Architecture" select="getCategoryList('Architecture','')"></tab>
 						 </tabset>
