--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
 								<div class="panel-body">
 
 							    <div class="thumbnail">
-							      <img ng-src="{{product.image}}">
+							      <img ng-if="null == product.asin" ng-src="{{product.image}}">
+										<img ng-if="null != product.asin" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
 							      <div class="caption">
 							        <h3>{{product.name}}</h3>
 											<p>
