--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 											<p>
 												<div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://item.getlego.me/detail/{{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
 											</p>
-							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
+							        <p ng-if="null == product.asin">상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
 											<p>
 												<blockquote>
 												 <p>
