--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 							    <div class="thumbnail">
 							      <img ng-if="null == product.asin" ng-src="{{product.image}}">
-										<img ng-if="null != product.asin" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
+										<img height="300" ng-if="null != product.asin" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
 							      <div class="caption">
 							        <h3>{{product.name}}</h3>
 											<p>
@@ -187,7 +187,7 @@
 											<p ng-if="null != product.asin">
 												<a href="http://www.amazon.com/gp/product/{{product.asin}}?ie=UTF8&tag=legospriccomp-20&link_code=wql" target="_blank">
 		 										 <button style="width:100%" class="btn btn-info" role="button">아마존 구매</button>
-												 <img src="http://ir-na.amazon-adsystem.com/e/ir?t=legospriccomp-20&l=as2&o=1&a={{product.asin}}" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+												 <img style="height:1px;" src="http://ir-na.amazon-adsystem.com/e/ir?t=legospriccomp-20&l=as2&o=1&a={{product.asin}}" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 		 									 </a>
 		 								 </p>
 							      </div>
@@ -270,7 +270,7 @@
 					    <div class="thumbnail">
 								<h4><span class="label label-info">{{product.badgeName}}</span> <img ng-src="{{product.categoryImage}}"height="25" ></h4>
 					      <img ng-if="null == product.asin" ng-src="{{product.image}}">
-								<img ng-if="null != product.asin" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
+								<img style="height:250px;" ng-if="null != product.asin" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
 								<div class="caption">
 
 					        <h4>{{product.name}}</h4>
@@ -301,7 +301,7 @@
 									 <button style="width:49%" class="btn btn-default" role="button" ng-click="viewDetail(product.prodCode)" ng-disabled="isLoading">가격 정보</button>
 									 <a href="http://www.amazon.com/gp/product/{{product.asin}}?ie=UTF8&tag=legospriccomp-20&link_code=wql" target="_blank">
 										 <button style="width:49%" class="btn btn-info" role="button">아마존 구매</button>
-										 <img src="http://ir-na.amazon-adsystem.com/e/ir?t=legospriccomp-20&l=as2&o=1&a={{product.asin}}" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+										 <img style="height:1px;" src="http://ir-na.amazon-adsystem.com/e/ir?t=legospriccomp-20&l=as2&o=1&a={{product.asin}}" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 									 </a>
 
 								 </p>
