--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 			</div>
 			<!-- MAIN CONTENT -->
 			<div id="main_content_wrap" class="outer">
-				<section id="search_content" class="inner" collapse="isCollapsed">
+				<section id="search_content" class="inner" ng-show="isCollapsed">
 					<div class="row" ng-repeat="product in products">
 
 					  <div class="col-sm-6 col-md-4">
