--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 							<div class="panel panel-default">
 							<!-- Default panel contents -->
 						   <div class="panel-heading">
-								 <h4><span class="label label-info">{{product.badgeName}}</span> 가격 및 상태 정보 <button type="button" class="btn btn-default" ng-click="!isCollapsed">close</button></h4>
+								 <h4><span class="label label-info">{{product.badgeName}}</span> 가격 및 상태 정보 <button type="button" class="btn btn-default" ng-click="isCollapsed = false">close</button></h4>
 							 </div>
 						   <div class="panel-body">
 								   <div class="row">
