--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
 
 		<script src="js/controller/home.js?20150812000"></script>
-		<script src="js/angular-socialshare.min.js?20150728004"></script>
+		<script src="js/angular-socialshare.min.js?20150728005"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/angular-socialshare.min.css?20150723007" rel="stylesheet">
 
 		<SCRIPT charset="utf-8" type="text/javascript" src="http://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=US&ID=V20070822%2FUS%2Flegospriccomp-20%2F8005%2Fcf8f905a-be42-4cb9-b7c4-a9cb72cf4832"> </SCRIPT>
 
-		<title>레고 공홈 가격비교</title>
+		<title>레고 공홈 가격비교 - 20150728005</title>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -199,7 +199,7 @@
 							<div class="panel panel-default">
 							<!-- Default panel contents -->
 						   <div class="panel-heading">
-								 <h4><span class="label label-info">{{product.badgeName}}</span> 가격 및 상태 정보 <button type="button" class="btn btn-default" ng-click="isCollapsed=false">close</button></h4>
+								 <h4><span class="label label-info">{{product.badgeName}}</span> 가격 및 상태 정보 <button type="button" class="btn btn-default" ng-click="closeDetail()">close</button></h4>
 							 </div>
 						   <div class="panel-body">
 								   <div class="row">
