--- a/index.html
+++ b/index.html
@@ -142,11 +142,9 @@
 			</div>
 			<!-- MAIN CONTENT -->
 			<div id="main_content_wrap" class="outer">
-				<section id="search_content" class="inner" ng-show="isCollapsed">
-					<div class="col-md-12 text-right">
-						<button type="button" class="btn btn-default" ng-click="closeDetail()">close</button>
-					</div>
-				</section>
+				<div class="col-md-12 text-right" style="padding-bottom: 10px;">
+					<button type="button" class="btn btn-default" ng-click="closeDetail()">close</button>
+				</div>
 				<section id="search_content" class="inner" ng-show="isCollapsed">
 					<div class="row" ng-repeat="product in products">
 
