이미지 크기..화면 변경..

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 			</div>
 			<!-- MAIN CONTENT -->
 			<div id="main_content_wrap" class="outer">
-				<div class="col-md-12 text-right" style="padding-bottom: 10px;">
+				<div class="col-md-12 text-right" style="padding-bottom: 10px;" ng-show="isCollapsed">
 					<button type="button" class="btn btn-default" ng-click="closeDetail()">close</button>
 				</div>
 				<section id="search_content" class="inner" ng-show="isCollapsed">
