--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 					  <div class="col-sm-6 col-md-4" ng-repeat="product in hardlist">
 					    <div class="thumbnail">
 								<h4><span class="label label-info">{{product.badgeName}}</span> <img ng-src="{{product.categoryImage}}"height="25" ></h4>
-					      <img ng-if="null == product.asin" ng-src="{{product.image}}">
+					      <img style="height:263px;" ng-if="null == product.asin" ng-src="{{product.image}}">
 								<img style="height:263px;" ng-if="null != product.asin" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
 								<div class="caption">
 
