이미지 크기..화면 변경..

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 					</div>
 				</section>
 			</div>
-			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;">
+			<div id="add_content_wrap" class="outer" style="padding-top: 20px;">
 				<section id="add_content" class="inner">
 					<div class="row">
 					  <div class="col-sm-12 text-center">
