--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			</div>
 		</div>
 		<div class="container">
-			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;" ng-click="clickAdd()">
+			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;cursor: pointer;" ng-click="clickAdd()">
 				<div class="row">
 				  <div class="col-xs-4 col-md-2 text-center">
 				      <a href="http://www.amazon.com/gp/product/1593276133/ref=as_li_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=1593276133&linkCode=as2&tag=legospriccomp-20&linkId=QW2MTGQJ4TWZHRNG">
