이미지 크기..화면 변경..

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		<div class="container">
 			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;cursor: pointer;border: 1px solid #eee; border-radius: 5px;" ng-click="clickAdd()">
 				<div class="row">
-				  <div class="col-xs-4 col-md-2 text-center">
+				  <div class="col-xs-4 col-md-2 text-center" style="padding-top: 5px;padding-bottom: 5px;">
 				      <a href="http://www.amazon.com/gp/product/1593276133/ref=as_li_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=1593276133&linkCode=as2&tag=legospriccomp-20&linkId=QW2MTGQJ4TWZHRNG">
 				        <img border="0" src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1593276133&Format=_SL110_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20" >
 				      </a>
