이미지 크기..화면 변경..

--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
 							 <div class="table-responsive">
 						   <table class="table  table-striped">
 								 <tr class="active">
-									 <th class="text-center">국가</th>
-									 <th class="text-center">뱃지</th>
-									 <th class="text-center">가격</th>
+									 <th class="text-center" style="width=100px">국가</th>
+									 <th class="text-center" style="width=100px">뱃지</th>
+									 <th class="text-center" style="width=100px">가격</th>
 									 <th class="text-center">구매가능수량</th>
-									 <th class="text-center">판매 메세지</th>
+									 <th class="text-center" style="width=300px">판매 메세지</th>
 									 <th></th>
 								 </tr>
 									 <tr ng-if="'am-US' != price.country" ng-repeat="price in product.prices" data-container="body" data-toggle="tooltip" data-placement="bottom" title="{{price.availabilityMessage}}">
