이미지 크기..화면 변경..

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				</p>
 			</div>
 		</div>
-		<div class="container">
+		<div class="container" style="padding-bottom: 20px">
 			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;cursor: pointer;border: 1px solid #eee; border-radius: 5px;" ng-click="clickAdd()">
 				<div class="row">
 				  <div class="col-xs-4 col-md-2 text-center" style="padding-top: 10px;padding-bottom: 10px;">
