--- a/index.html
+++ b/index.html
@@ -269,8 +269,10 @@
 							<tab heading="Star Wars™" select="getCategoryList('Star Wars™','')"></tab>
 							<tab heading="Modular" select="getCategoryList('Creator','ModularBuildings')"></tab>
 							<tab heading="Ideas" select="getCategoryList('Ideas','')"></tab>
+							<tab heading="The Simpsons™" select="getCategoryList('The Simpsons™','')"></tab>
 							<tab heading="Minecraft™" select="getCategoryList('Minecraft™','')"></tab>
 							<tab heading="Architecture" select="getCategoryList('Architecture','')"></tab>
+							<tab heading="Technic" select="getCategoryList('Technic','')"></tab>
 						 </tabset>
 					 </div>
 				 </div>
