--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 							    <div class="thumbnail">
 							      <img ng-if="null == product.asin" ng-src="{{product.image}}">
-										<img ng-if="null != product.asin" onError="this.src='{{product.image}}';" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
+										<img ng-if="null != product.asin" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
 							      <div class="caption">
 							        <h3>{{product.name}}</h3>
 											<p>
@@ -278,7 +278,7 @@
 					    <div class="thumbnail">
 								<h4><span class="label label-info">{{product.badgeName}}</span> <img ng-src="{{product.categoryImage}}"height="25" ></h4>
 					      <img style="height:263px;" ng-if="null == product.asin" ng-src="{{product.image}}">
-								<img style="height:263px;" ng-if="null != product.asin" onError="this.src='{{product.image}}';" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
+								<img style="height:263px;" ng-if="null != product.asin" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
 								<div class="caption">
 
 					        <h4>{{product.name}}</h4>
