--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
 								<h4><span class="label label-info">{{product.badgeName}}</span> <img ng-src="{{product.categoryImage}}"height="25" ></h4>
 					      <img style="height:263px;" ng-if="null == product.asin" ng-src="{{product.image}}">
 								<img style="height:263px;" ng-if="null != product.asin" error-src="{{product.image}}" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
-								<div class="caption">
+								<div class="caption" style="hieght:370px;">
 
-					        <h4><div style="width:100%;text-overflow:ellipsis; overflow:hidden">{{product.name}}</div></h4>
+					        <h4>{{product.name}}</h4>
 									<blockquote>
  									 <p>Item : {{product.prodCode}}</p>
 									 <p><h6>http://item.getlego.me/detail/{{product.prodCode}}</h6></p>
