--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+		<style>
+		body { font-family:"Museo Slab",Rockwell,Courier,sans-serif }
+		</style>
 	</head>
 	<body ng-controller="legoController" style="padding-top: 50px;padding-bottom: 20px;">
 	<script>
