--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
 
-		<script src="js/controller/home.js?20150813001"></script>
+		<script src="js/controller/home.js?20150813002"></script>
 		<script src="js/angular-socialshare.min.js?20150728005"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/angular-socialshare.min.css?20150723007" rel="stylesheet">
@@ -129,18 +129,18 @@
 			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;cursor: pointer;border: 1px solid #eee; border-radius: 5px;" ng-click="clickAdd()">
 				<div class="row">
 				  <div class="col-xs-4 col-md-2 text-center" style="padding-top: 10px;padding-bottom: 10px;">
-				      <a href="http://www.amazon.com/gp/product/1593276133/ref=as_li_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=1593276133&linkCode=as2&tag=legospriccomp-20&linkId=QW2MTGQJ4TWZHRNG">
-				        <img border="0" src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1593276133&Format=_SL110_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20" >
+				      <a href="{{ link }}">
+				        <img border="0" ng-src="{{ img }}" >
 				      </a>
-							<span class="label label-info">pre oder $16.27</span>
-				      <img src="http://ir-na.amazon-adsystem.com/e/ir?t=legospriccomp-20&l=as2&o=1&a=1593276133" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+							<span class="label label-info">{{ price }}</span>
+				      <img ng-src="{{uvImage}}" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 				  </div>
 				  <div class="col-xs-8 col-md-10">
 							<div class="col-xs-12 col-md-12">
-								<h4>The LEGO Architect <small>Hardcover – September 25, 2015</small></h4>
+								<h4>{{ title }} <small>{{ smallTitle }}</small></h4>
 							</div>
 							<div class="col-xs-12 col-md-12 text-overflow" style="padding-bottom: 10px;" >
-								<p style="overflow : hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;-webkit-box-orient: vertical;width:100%;">Travel through the history of architecture in The LEGO Architect. You'll learn about styles like Art Deco, Modernism, and High-Tech, and find inspiration in galleries of LEGO models. Then take your turn building 12 models in a variety of styles. Snap together some bricks and learn architecture the fun way!</p>
+								<p style="overflow : hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;-webkit-box-orient: vertical;width:100%;">{{ desc }}</p>
 							</div>
 				  </div>
 				</div>
@@ -165,7 +165,7 @@
 							      <img ng-if="null == product.asin" ng-src="{{product.image}}">
 										<img ng-if="null != product.asin" error-src="{{product.image}}" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
 							      <div class="caption">
-							        <h3 style="font-family:'Museo Slab',Rockwell,Courier,sans-serif">{{product.name}}</h3>
+							        <h3>{{product.name}}</h3>
 											<p>
 												<div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://item.getlego.me/detail/{{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
 											</p>
@@ -276,12 +276,12 @@
 					<div class="row">
 					  <div class="col-sm-6 col-md-4" ng-repeat="product in hardlist">
 					    <div class="thumbnail">
-								<h4><span class="label label-info">{{product.badgeName}}</span> <img ng-src="{{product.categoryImage}}"height="25" ></h4>
+								<h4><span class="label label-info">{{product.badgeName}}</span> <img ng-src="{{product.categoryImage}}" height="25" ></h4>
 					      <img style="height:263px;" ng-if="null == product.asin" ng-src="{{product.image}}">
 								<img style="height:263px;" ng-if="null != product.asin" error-src="{{product.image}}" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
 								<div class="caption" style="height:370px;">
 
-					        <h4  style="font-family:'Museo Slab',Rockwell,Courier,sans-serif">{{product.name}}</h4>
+					        <h4>{{product.name}}</h4>
 									<blockquote>
  									 <p>Item : {{product.prodCode}}</p>
 									 <p><h6>http://item.getlego.me/detail/{{product.prodCode}}</h6></p>
