--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<div class="row">
 					  <div class="col-xs-12 col-sm-6 col-md-8"><h2 id="project_title">레고 공홈 가격비교 <small>Let's search!!</small></h2></div>
 					  <div class="col-xs-6 col-md-4">
-								<div class="fb-like" data-href="http://www.getlego.me" data-layout="standard" data-action="recommend" data-show-faces="true" data-share="true"></div>
+								<div class="fb-like" data-href="http://www.getlego.me" data-layout="standard" data-action="recommend" data-show-faces="true" data-share="true" data-width="225px"></div>
 						</div></div>
 					</div>
 
@@ -223,7 +223,7 @@
 								   </div>
 								   <div class="row">
 								     <div class="col-md-12">
-									 	 	<div class="fb-like" data-href="http://item.getlego.me/detail/{{product.prodCode}}" data-layout="standard" data-action="recommend" data-show-faces="true" data-share="true"></div>
+									 	 	<div class="fb-like" data-href="http://item.getlego.me/detail/{{product.prodCode}}" data-layout="standard" data-action="recommend" data-show-faces="true" data-share="true"  data-width="225px"></div>
 										</div>
 									</div>
 						   </div>
