--- a/index2.html
+++ b/index2.html
@@ -209,7 +209,7 @@
 						    <h4>가격 변화</h4>
 						    </div>
 						    <div class="panel-body">
-									<canvas style="height:263px;" width="100%" id="line" class="chart chart-line" data="data"
+									<canvas id="line" class="chart chart-line" data="data"
 									  labels="labels" legend="true" series="series"
 									  click="onClick">
 									</canvas>
