--- a/index2.html
+++ b/index2.html
@@ -210,7 +210,7 @@
 						    </div>
 						    <div class="panel-body">
 									<canvas id="line" class="chart chart-line" data="data"
-									  labels="labels" legend="true" series="series"
+									  labels="labels" legend="true" series="series" options="options"
 									  click="onClick">
 									</canvas>
 						    </div>
