--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
 		<script src="/js/Chart.js"></script>
 		<script src="/js/angular-chart.js"></script>
 
-		<script src="/js/controller/home.js?20150826003"></script>
+		<script src="/js/controller/home.js?20150826004"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="/css/angular-chart.css">
 		<!--
@@ -209,7 +209,7 @@
 						    <h4>가격 변화</h4>
 						    </div>
 						    <div class="panel-body">
-									<canvas id="line" class="chart chart-line" data="data"
+									<canvas id="line" class="chart chart-line" data="data" colours="colours"
 									  labels="labels" legend="true" series="series" options="options"
 									  click="onClick">
 									</canvas>
